2006-02-23  David Reveman  <davidr@novell.com>

	* configure.ac: Bump version to 0.0.4.

	* gnome/window-decorator/gnome-window-decorator.c (window_opened): Make
	sure decoration property for switcher window is set.

	* plugins/decoration.c (decorHandleEvent):
	* src/event.c (handleEvent):
	* plugins/switcher.c:
	* src/screen.c (addScreen, setScreenOption)
	(compScreenInitOptions):
	* src/texture.c: 
	* include/compiz.h: Mipmap support. Add more RUN_COMMAND options.

2006-02-22  David Reveman  <davidr@novell.com>

	* src/display.c (realToVirtualModMask): Remove modifiers that should
	be ignored.
	(addDisplay): Select ButtonPress and ButtonRelease events on root
	window.

	* include/compiz.h (EV_KEY):
	(EV_BUTTON):  Modifiers should match exactly.

	* plugins/switcher.c: Add binding for selecting previous window.

	* plugins/decoration.c: Remove sync hack.

	* gnome/window-decorator/gnome-window-decorator.c
	(draw_shadow_background): Fix drawing of bottom and bottom right
	shadow rectangle.
	Add switcher window decorations.
	Remove sync hack.
	Always use double buffering.

	* plugins/switcher.c: Remove background color option.
	Use property instead of client message to indicate change of selected
	window.

2006-02-21  David Reveman  <davidr@novell.com>

	* plugins/cube.c (cubeHandleEvent): Only load new SVG when available.

2006-02-20  David Reveman  <davidr@novell.com>

	* plugins/decoration.c (decorWindowUpdate): Decorate window
	MwmDecorTitle is present.

	* src/window.c (focusWindow):
	(moveInputFocusToWindow):
	 Allow focusing windows with input hint set to false.
	 (activateWindow): Fix so that dock windows can be active.

	* src/screen.c (isClientListWindow): Don't put destroyed windows in
	client lists.

	* src/event.c (handleEvent): Fix so that dock windows can be active.
	(handleEvent): Avoid focusing windows with input hint set to false
	when mapped.

2006-02-18  David Reveman  <davidr@novell.com>
