@@ -1,5 +1,9 @@
 2006-02-23  David Reveman  <davidr@novell.com>
 
+	* plugins/wobbly.c: Fix handling of scaled windows.
+	Update options so that user gets more control over which windows
+	that should wobble and when.
+
 	* configure.ac: Bump version to 0.0.4.
 
 	* gnome/window-decorator/gnome-window-decorator.c (window_opened): Make
@@ -10,7 +14,7 @@
 	* plugins/switcher.c:
 	* src/screen.c (addScreen, setScreenOption)
 	(compScreenInitOptions):
-	* src/texture.c: 
+	* src/texture.c:
 	* include/compiz.h: Mipmap support. Add more RUN_COMMAND options.
 
 2006-02-22  David Reveman  <davidr@novell.com>
